# image_tools

./: .gitignore  Makefile  app.py  database.db  pyproject.toml
image_tools/: database.py  main.py  models.py
image_tools/collection/: updater.py
image_tools/duplicate/: finder.py
tests/: test_image_tools.py
vue/: package.json  vue.config.js
vue/public/: index.html
vue/src/components/: HelloWorld.vue
web/: index.html  precache-manifest.6147e5b834665fd72785b5803b16413b.js  service-worker.js
web/css/: app.688045ec.css
web/js/: about.7d9379eb.js  about.7d9379eb.js.map  app.b6300b5a.js  app.b6300b5a.js.map
