[tool.poetry]
name = "image_tools"
version = "0.1.0"
description = ""
authors = ["Thomas Guyader <thomas.guyader@gouv.nc>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3.13"
imagededup = "^0.2.2"
eel = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
